<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Iot设备管理</string>
    <string name="title_activity_login_home">LoginHomeActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_code_1">Resend </string>
    <string name="register_code_2">Email\nVerification</string>
    <string name="register_code_3">erification code will be sent to</string>
    <string name="register_code_4">Verification code expires in 5 minutes.</string>
    <string name="register_code_5">Confirm</string>
    <string name="register_home_1">Privacy Policy</string>
    <string name="register_home_2">User Agreement</string>
    <string name="register_home_3">Log in</string>
    <string name="register_home_4">请输入正确的邮箱</string>
    <string name="register_home_5">请勾选隐私政策和用户协议</string>
    <string name="register_home_6">Create\nan Account</string>
    <string name="register_home_7">Select your country/region and enter your email</string>
    <string name="register_home_8">United States</string>
    <string name="register_home_9">Enter Your Email</string>
    <string name="register_home_10">I have read and understood the</string>
    <string name="register_home_11">and agree to the</string>
    <string name="register_home_12">Next</string>
    <string name="register_home_13">Already have an account?</string>
    <string name="register_select_country_1">Select country/Region</string>
    <string name="register_select_country_2">Save</string>
    <string name="register_password_1">Set Password</string>
    <string name="register_password_2">Please set your password and re-enter it to confirm.</string>
    <string name="register_password_3">Enter Password</string>
    <string name="register_password_4">Confirm Password</string>
    <string name="register_password_5">Passwords do not match</string>
    <string name="register_password_6">两次输入的密码不一致</string>
    <string name="register_password_7">请输入6-18位密码</string>
    <string name="login_main_1">Create One</string>
    <string name="login_main_2">Do not have an account?</string>
    <string name="login_main_3">Fotgot Password?</string>
    <string name="login_main_4">Email OTP Login</string>
    <string name="login_main_5">Password Login</string>
    <string name="login_main_6">Email Login</string>
    <string name="login_main_7">We will send a verification code to your email</string>
    <string name="forget_password_1">Fotgot Password</string>
    <string name="forget_password_2">Enter Email</string>
    <string name="forget_password_3">We will send the verification code to your email</string>
    <string name="forget_password_4">Invalid email format</string>
    <string name="forget_password_5">Set\nNew Password</string>
    <string name="forget_password_6">Please set your password and re-enter it to confirm.</string>
    <string name="forget_password_7">Enter New Password</string>
    <string name="forget_password_8">Change Password</string>
    <string name="device_blueth_1">Connect devices</string>
    <string name="device_blueth_2">Searching...</string>
    <string name="device_blueth_3">Keep your device powered on\nPhone Bluetooth is enabled\nPlace your phone near the device</string>
    <string name="device_blueth_4">No Device Found!</string>
    <string name="device_blueth_5">Please check:\nYour device powered on\nPhone Bluetooth is enabled\nYour phone near the device</string>
    <string name="device_blueth_6">Try Again</string>
    <string name="device_blueth_7">Connect</string>
    <string name="device_blueth_8">Cancel</string>
    <string name="device_blueth_9">BluetaniX HydriX 2S</string>
    <string name="device_blueth_10">device connecting</string>
    <string name="device_blueth_11">No Device Link Failed !</string>
    <string name="link_guide_device_1">Connect devices</string>
    <string name="link_guide_device_2">Confirm that the device is powered on</string>
    <string name="link_guide_device_3">Press and hold "switch" 、 "max+" for 5 seconds. Once the LED indicator flashes, the device enters the network configuration</string>
    <string name="network_configuration_1">Network Configuration</string>
    <string name="network_configuration_2">Enter the new home Wi-Fi information, then tap "Confirm" to apply the changes</string>
    <string name="network_configuration_3">Supports only 2.4GHz Wi-Fi</string>
    <string name="network_configuration_4">Enter Wi-Fi Name</string>
    <string name="network_configuration_5">Continue</string>
    <string name="connect_network_1">Connection failed</string>
    <string name="connect_network_2">Connecting to network ...</string>
    <string name="connect_network_3">Connect finished</string>
    <string name="connect_network_4">Please verify that you have entered\nthe correct Wi-Fi password</string>
    <string name="connect_network_5">Start</string>
    <string name="connect_network_6">Try Again</string>
    <string name="connect_network_7">next 1/2</string>
    <string name="connect_network_8">next 2/2</string>
    <string name="connect_network_9">配网成功</string>
    <string name="connect_network_10">该设备已被他人绑定</string>
    <string name="home_page_main">+ Add Product</string>
    <string name="home_page_main_2">Enter</string>
    <string name="home_page_main_3">Online</string>
    <string name="home_page_main_4">Offline</string>
    <string name="device_detail_1">Stand by</string>
    <string name="device_detail_2">Map</string>
    <string name="device_detail_3">Area</string>
    <string name="blueth_mode_1">Standard Mode</string>
    <string name="blueth_mode_standard_1">Normal</string>
    <string name="mode_choose_mode_1">Mode Choose</string>
    <string name="mode_choose_mode_2">Standard Mode</string>
    <string name="mode_choose_mode_3">Floor + Wall + Waterline\nmulti-clean mode</string>
    <string name="mode_choose_mode_4">Preference</string>
    <string name="mode_choose_mode_5">ECO</string>
    <string name="mode_choose_mode_6">Normal</string>
    <string name="mode_choose_mode_7">Turbo</string>
    <string name="mode_choose_mode_8">Normal gear will take average cleaning time.</string>
    <string name="mode_choose_mode_9">Floor single clean mode</string>
    <string name="mode_choose_mode_10">Floor Mode</string>
    <string name="mode_choose_mode_11">Wall Mode</string>
    <string name="mode_choose_mode_12">Wall single clean mode</string>
    <string name="mode_choose_mode_13">Waterline Mode</string>
    <string name="mode_choose_mode_14">Wall single clean mode</string>
    <string name="mode_choose_mode_15">Max+ Mode</string>
    <string name="mode_choose_mode_16">murky water clean mode</string>
    <string name="mode_choose_mode_17">Round Time Set</string>
    <string name="mode_choose_mode_18">5min</string>
    <string name="mode_choose_mode_19">10min</string>
    <string name="mode_choose_mode_20">15min</string>
    <string name="mode_choose_mode_21">Area Mode</string>
    <string name="mode_choose_mode_22">Floor area | edge clean mode</string>
    <string name="device_more_1">More</string>
    <string name="device_more_2">Modify Product Name</string>
    <string name="device_more_3">Product Name</string>
    <string name="device_more_4">Task Record</string>
    <string name="device_more_5">Retrieval Set</string>
    <string name="device_more_6">Consumable Mgmt</string>
    <string name="device_more_7">Device Information</string>
    <string name="device_more_8">Friendly Reminder?</string>
    <string name="device_more_9">Are you sure to unbind the device? After unbinding, the device cannot be used, and you will need to rebind it for further use.</string>
    <string name="device_more_10">解绑成功</string>
    <string name="device_more_11">Confirm Clear History ?</string>
    <string name="device_more_12">This action will permanently delete all historical data (including task records, time/area statistics). The data cannot be recovered after deletion. Are you sure you want to proceed?</string>
    <string name="device_more_13">Edit</string>
    <string name="device_more_14">Retrieve Point</string>
    <string name="device_more_15">Random</string>
    <string name="device_more_16">Waiting Time</string>
    <string name="device_more_17">10min</string>
    <string name="device_more_18">Done</string>
    <string name="device_more_19">Setting up...</string>
    <string name="device_more_20">5min</string>
    <string name="device_more_21">Devices</string>
    <string name="device_more_22">Add Accessories</string>
    <string name="device_more_23">Connected Accessories</string>
    <string name="device_more_24">Available Accessories</string>
    <string name="device_more_25">Successful</string>
    <string name="device_more_26">Disconnect</string>
    <string name="mine_main_1">NickName</string>
    <string name="mine_main_2">example@xxx.com</string>
    <string name="mine_main_3">ID: DXSANDBQEFQH</string>
    <string name="mine_main_4">Message\nCenter</string>
    <string name="mine_main_5">Support\nassistance</string>
    <string name="mine_main_6">Account\nManagement</string>
    <string name="mine_main_7">Setting</string>
    <string name="mine_main_8">Privacy、Security</string>
    <string name="mine_main_9">About Us</string>
    <string name="mine_main_10">Encourage Us</string>
    <string name="mine_main_11">Check for Update</string>
    <string name="mine_main_12">Current Version</string>
    <string name="mine_main_13">Account  Management</string>
    <string name="mine_main_14">Country/Region</string>
    <string name="mine_main_15">Account Cancellation</string>
    <string name="mine_main_16">Change Country</string>
    <string name="mine_main_17">Change Email</string>
    <string name="mine_main_18">Personal Information</string>
    <string name="mine_main_19">Acatar</string>
    <string name="mine_main_20">Nickname</string>
    <string name="mine_main_21">Input Nickname</string>
    <string name="mine_main_22">拍照</string>
    <string name="mine_main_23">从手机相册选择</string>
    <string name="mine_main_24">New\nemail address</string>
    <string name="mine_main_25">Current Account is Bound to this Email:</string>
    <string name="mine_main_26">To change your email, enter a new email below and verify.</string>
    <string name="mine_main_27">Account\nVerification</string>
    <string name="mine_main_28">Tap to have the verification code sent to the email below.</string>
    <string name="mine_main_29">Account\nVerification</string>
    <string name="mine_main_30">Tap to have the verification code sent to the email below.</string>
    <string name="mine_main_31">Can not receive verification code?</string>
    <string name="mine_main_32">Verification code will be sent to</string>
    <string name="workspace_title">Workspace</string>
    <string name="edit_character">编辑角色</string>
    <string name="character_name_label">角色名称</string>
    <string name="character_setting_label">角色设定</string>
    <string name="environment_label">环境描述</string>
    <string name="save_changes">保存修改</string>
    <string name="name_hint">输入角色姓名</string>
    <string name="description_hint">描述角色的性格、背景与说话方式…</string>
    <string name="environment_hint">定义故事发生的舞台…</string>
    <string name="character_avatar">Character Avatar</string>
    <string name="menu_desc">Menu</string>
    <string name="profile_desc">User Profile</string>
    <string name="nav_browse_desc">Browse Characters</string>
    <string name="nav_stories_desc">Stories</string>
    <string name="nav_edit_desc">Edit</string>
    <string name="back_desc">返回</string>
</resources>